added admins page folder/files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Ice Shop</title>
 </head>
 <body>
-    
+    <!-- Navigation -->
+
+    <!-- Banner -->
+
+    <!-- Main -->
+
+    <!-- Some catalogue -->
+
+    <!-- Footer -->
 </body>
 </html>
