--- a/src/public/index.html
+++ b/src/public/index.html
@@ -25,7 +25,7 @@
     <!--Bootstrap icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!--Website logo-->
-    <link rel="shortcut icon" type="image/x-icon" href="/public/images/Logo.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/images/Logo.png" />
     <title>Ice Shop</title>
   </head>
   <body>
@@ -34,7 +34,7 @@
       <div class="container-xxl">
         <a href="#" class="navbar-brand ps-4">
           <img
-            src = "/public/images/Logo.png" alt="Ice-Dude logo"
+            src = "./images/Logo.png" alt="Ice-Dude logo"
             width="40"
             height="50"
             alt="Ice-Dude logo"
