--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
-    <script src="/js/main.js" defer></script>
+    <link rel="stylesheet" href="css/main.css" />
     <!--Fontawesome-->
     <script
       src="https://kit.fontawesome.com/ff00a6193a.js"
@@ -181,7 +180,7 @@
         <div class="row">
           <div class="col-lg-3 mb-3">
             <a class="d-inline-flex align-items-center mb-2 text-body-secondary text-decoration-none" href="/" aria-label="Ice-Dude">
-              <img src="/public/images/Logo.png" style="width: 30px; height: 30px;">
+              <img src="./images/Logo.png" style="width: 30px; height: 30px;">
               <span class="fs-5 ms-2">Ice-Dude</span>
             </a>
             <ul class="list-unstyled small">
