--- a/public/index.html
+++ b/public/index.html
@@ -65,27 +65,14 @@
           id="navbarNavDropdown"
         >
           <ul class="nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Menu</a>
-            </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link"
                 href="#"
                 role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
               >
-                Catalogue
+                Menu
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Cone Ice Cream</a></li>
-                <li><a class="dropdown-item" href="#">Stick Ice Cream</a></li>
-                <li><a class="dropdown-item" href="#">Waffle Ice Cream</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Locations</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
@@ -273,10 +260,6 @@
           </div>
           <div class="col-6 col-lg-2 offset-lg-1 mb-3">
             <h5>Menu</h5>
-            <ul class="list-unstyled"></ul>
-          </div>
-          <div class="col-6 col-lg-2 mb-3">
-            <h5>Location</h5>
             <ul class="list-unstyled"></ul>
           </div>
           <div class="col-6 col-lg-2 mb-3">
