added pages to server, deleted to need files

--- a/public/pages/aboutUs/about.html
+++ b/public/pages/aboutUs/about.html
@@ -28,9 +28,9 @@
     />
     <!--Website logo-->
     <link rel="shortcut icon" type="image/x-icon" href="/images/Logo.png" />
-    <title>Admin</title>
+    <title>About Us</title>
   </head>
-<body>
-    <h1>Admins page</h1>
-</body>
+  <body>
+    <h1>About Us page</h1>
+  </body>
 </html>
