--- a/public/pages/catalog/catalog.html
+++ b/public/pages/catalog/catalog.html
@@ -27,7 +27,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
     <!--Website logo-->
-    <link rel="shortcut icon" type="image/x-icon" href="/images/Logo.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/public/images/Logo.png" />
     <title>Ice Shop</title>
   </head>
   <body>
