--- a/public/pages/location/location.html
+++ b/public/pages/location/location.html
@@ -3,7 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="location.css" />
+    <!--Fontawesome-->
+    <script
+      src="https://kit.fontawesome.com/ff00a6193a.js"
+      crossorigin="anonymous"
+    ></script>
+    <!--Bootstrap-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <!--Bootstrap icons-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
+    <!--Website logo-->
+    <link rel="shortcut icon" type="image/x-icon" href="/public/images/Logo.png" />
+
     <!-- Leaflet API -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
@@ -18,12 +43,31 @@
     <style>
         #map {
             height: 600px;
-            width: 70%;
+            width: 80%;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        #about-info {
+            width: 80%;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h2 {
+            text-align: center;
+            padding: 20px;
         }
     </style>
 </head>
 <body>
+    <h2>Our location and info about us</h2>
+
     <div id="map"></div>
+
+    <div id="about-info">
+        <h3>About Us</h3>
+        <p>Welcome to our business! We are dedicated to providing ice cream to you.</p>
+        <p>We can serve you in the area that you can see in the map or you can visit our store.</p>
+    </div>
 
     <script src="location.js"></script>
 </body>
